# ai-chat-bot

./: .gitignore  .gitmodules  AI.sln  CMakeLists.txt  readme.md  todo
doc/: concept.drawio
libs/: CMakeLists.txt
src/AI.Chat.Adapters.GoogleAI/: AI.Chat.Adapters.GoogleAI.csproj  GoogleAI.cs
src/AI.Chat.Adapters.OpenAI/: AI.Chat.Adapters.OpenAI.csproj  OpenAI.cs
src/AI.Chat.Clients.Console/: AI.Chat.Clients.Console.csproj  Console.cs
src/AI.Chat.Clients.Twitch/: AI.Chat.Clients.Twitch.csproj  AuthClient.cs  Twitch.cs  TwitchClient.cs
src/AI.Chat.Clients.Twitch.Diagnostics/: AI.Chat.Clients.Twitch.Diagnostics.csproj  Twitch.cs
src/AI.Chat.Diagnostics/: AI.Chat.Diagnostics.csproj  ActivitySources.cs  Counters.cs  Meters.cs
src/AI.Chat.Host/: AI.Chat.Host.csproj  (+5 more)
src/AI.Chat.Host.API/: AI.Chat.Host.API.csproj  Dockerfile  Helpers.cs  Program.cs  appsettings.json
src/AI.Chat.Host.Console/: AI.Chat.Host.Console.csproj  Constants.cs  Helpers.cs  Program.cs  appsettings.Development.json  appsettings.json
src/AI.Chat.Hosts.Console/: AI.Chat.Hosts.Console.csproj  CMakeLists.txt  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json  main.cxx
src/AI.Chat.Hosts.Console/Properties/: launchSettings.json
src/OpenAI/: CMakeLists.txt  Client.hpp
src/OpenAI/include/OpenAI/: Client.hpp
src/OpenAI/include/OpenAI/impl/: Client.ipp
src/Twitch/: CMakeLists.txt
src/Twitch/include/Twitch/Auth/: Client.hpp
src/Twitch/include/Twitch/Auth/impl/: Client.ipp
src/Twitch/include/Twitch/IRC/: Client.hpp
src/Twitch/include/Twitch/IRC/impl/: Client.ipp
src/adapters/: CMakeLists.txt
src/adapters/common/: CMakeLists.txt
src/adapters/common/include/ai/chat/adapters/: rate_limited.hpp
src/adapters/common/include/ai/chat/adapters/impl/: rate_limited.ipp
src/adapters/openai/: CMakeLists.txt
src/adapters/openai/include/ai/chat/adapters/: openai.hpp
src/adapters/openai/include/ai/chat/adapters/detail/: connection.hpp  scope.hpp
src/adapters/openai/include/ai/chat/adapters/detail/impl/: connection.ipp  scope.ipp
src/adapters/openai/include/ai/chat/adapters/impl/: openai.ipp
src/adapters/telemetry/: CMakeLists.txt
src/adapters/telemetry/include/ai/chat/adapters/: content_length.hpp  log.hpp  total_tokens.hpp  trace.hpp
src/adapters/telemetry/include/ai/chat/adapters/impl/: content_length.ipp  log.ipp  total_tokens.ipp  trace.ipp
src/binders/: CMakeLists.txt
src/binders/console/: CMakeLists.txt
src/binders/console/include/ai/chat/binders/: console.hpp
src/binders/console/include/ai/chat/binders/impl/: console.ipp
src/binders/openai/: CMakeLists.txt
src/binders/openai/include/ai/chat/binders/: openai.hpp
src/binders/openai/include/ai/chat/binders/impl/: openai.ipp
src/binders/twitch/: CMakeLists.txt
src/binders/twitch/include/ai/chat/binders/: twitch.hpp
src/binders/twitch/include/ai/chat/binders/impl/: twitch.ipp
src/clients/: CMakeLists.txt
src/clients/console/: CMakeLists.txt
src/clients/console/include/ai/chat/clients/: console.hpp
src/clients/console/include/ai/chat/clients/detail/: connection.hpp
src/clients/console/include/ai/chat/clients/detail/impl/: connection.ipp
src/clients/console/include/ai/chat/clients/impl/: console.ipp
src/clients/observable/: CMakeLists.txt
src/clients/observable/include/ai/chat/clients/: observable.hpp
src/clients/observable/include/ai/chat/clients/impl/: observable.ipp
src/clients/twitch/: CMakeLists.txt
src/clients/twitch/include/ai/chat/clients/: auth.hpp  twitch.hpp
src/clients/twitch/include/ai/chat/clients/detail/: auth_connection.hpp  connection.hpp
src/clients/twitch/include/ai/chat/clients/detail/impl/: auth_connection.ipp  connection.ipp
src/clients/twitch/include/ai/chat/clients/handlers/: observable.hpp
src/clients/twitch/include/ai/chat/clients/handlers/impl/: observable.ipp
src/clients/twitch/include/ai/chat/clients/impl/: auth.ipp  twitch.ipp
src/clients/twitch/include/ai/chat/clients/twitch/: auth.hpp  irc.hpp
src/clients/twitch/include/ai/chat/clients/twitch/handlers/: observable.hpp
src/clients/twitch/include/ai/chat/clients/twitch/handlers/impl/: observable.ipp
src/clients/twitch/include/ai/chat/clients/twitch/impl/: auth.ipp  irc.ipp
src/commands/: CMakeLists.txt
src/commands/include/ai/chat/: commands.hpp
src/commands/include/ai/chat/commands/: allow.hpp  ban.hpp  content.hpp  deny.hpp  deny.ipp  edit.hpp  executor.hpp  find.hpp  instruct.hpp  join.hpp  leave.hpp  mod.hpp  remove.hpp  timeout.hpp  unban.hpp  unmod.hpp
src/commands/include/ai/chat/commands/impl/: allow.ipp  ban.ipp  content.ipp  deny.ipp  edit.ipp  executor.ipp  find.ipp  instruct.ipp  join.ipp  leave.ipp  mod.ipp  remove.ipp  timeout.ipp  unban.ipp  unmod.ipp
src/eboost/: CMakeLists.txt
src/eboost/include/eboost/beast/: channel.hpp  ensure_success.hpp
src/eboost/include/eboost/beast/http/: client.hpp  form_body.hpp  json_body.hpp  session.hpp
src/eboost/include/eboost/beast/websocket/: client.hpp
src/histories/: CMakeLists.txt
src/histories/observable/: CMakeLists.txt
src/histories/observable/include/ai/chat/histories/: observable.hpp
src/histories/observable/include/ai/chat/histories/impl/: observable.ipp
src/histories/sqlite/: CMakeLists.txt
src/histories/sqlite/include/ai/chat/histories/: sqlite.hpp
src/histories/sqlite/include/ai/chat/histories/detail/: connection.hpp  scope.hpp
src/histories/sqlite/include/ai/chat/histories/detail/impl/: connection.ipp  scope.ipp
src/histories/sqlite/include/ai/chat/histories/impl/: sqlite.ipp
src/hosts/console/: CMakeLists.txt  Dockerfile  main.cpp  version.rc
src/moderators/: CMakeLists.txt
src/moderators/sqlite/: CMakeLists.txt
src/moderators/sqlite/include/ai/chat/moderators/: sqlite.hpp
src/moderators/sqlite/include/ai/chat/moderators/detail/: connection.hpp
src/moderators/sqlite/include/ai/chat/moderators/detail/impl/: connection.ipp
src/moderators/sqlite/include/ai/chat/moderators/impl/: sqlite.ipp
src/telemetry/: CMakeLists.txt
src/telemetry/include/ai/chat/: telemetry.hpp
(+206 files in other folders)
