cmake_minimum_required(VERSION 3.25.1)

project(AI VERSION 0.1)

option(TELEMETRY "Enable telemetry" OFF)
if(TELEMETRY)
  add_compile_definitions(ENABLE_TELEMETRY)
endif()

if(MSVC)
  add_compile_options(/bigobj)
  if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
    set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreadedDebug)
  else()
    set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreaded)
  endif()
  #add_compile_options(/GR-)
elseif(LINUX)
  set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
endif()

add_subdirectory(third_party)

add_subdirectory(src/telemetry)
add_subdirectory(src/clients)
add_subdirectory(src/adapters)
add_subdirectory(src/histories)
add_subdirectory(src/moderators)
add_subdirectory(src/commands)
add_subdirectory(src/binders)
add_subdirectory(src/hosts/console)
